--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -57,7 +56,25 @@
                 </div>
                 <div class="auth-form">
                     <input type="email" id="signup-email" placeholder="Email" class="input-field">
-                    <input type="password" id="signup-password" placeholder="Password" class="input-field">
+                    <div style="position: relative;">
+                        <input type="password" id="signup-password" placeholder="Password" class="input-field">
+                        <span class="password-toggle" onclick="togglePassword('signup-password')">👁️</span>
+                    </div>
+                    
+                    <!-- Password Strength Meter -->
+                    <div class="password-strength-container">
+                        <div class="password-strength-bar">
+                            <div id="passwordMeter" class="password-strength-fill"></div>
+                        </div>
+                        <ul id="passwordRequirements" class="password-requirements">
+                            <li class="req-unmet">At least 8 characters</li>
+                            <li class="req-unmet">One uppercase letter (A-Z)</li>
+                            <li class="req-unmet">One lowercase letter (a-z)</li>
+                            <li class="req-unmet">One number (0-9)</li>
+                            <li class="req-unmet">One special character (!@#$%^&*)</li>
+                        </ul>
+                    </div>
+                    
                     <input type="password" id="confirm-password" placeholder="Confirm Password" class="input-field">
                     <input type="text" id="first-name" placeholder="First Name" class="input-field">
                     <input type="text" id="middle-name" placeholder="Middle Name (Optional)" class="input-field">
