--- a/contact.html
+++ b/contact.html
@@ -255,7 +255,7 @@
 </head>
 <body>
     <div class="contact-container">
-        <button class="back-btn" id="back-to-dashboard">
+        <button class="back-btn" onclick="window.location.href='dashboard.html'">
             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" width="20" height="20">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 12H5m7-7l-7 7 7 7"/>
             </svg>
@@ -374,11 +374,6 @@
         // Setup theme from localStorage
         const theme = localStorage.getItem('chilla-theme') || 'light';
         document.documentElement.setAttribute('data-theme', theme);
-
-        // Back button handler
-        document.getElementById('back-to-dashboard').addEventListener('click', function() {
-            window.location.href = 'dashboard.html';
-        });
 
         // Secure API configuration - no exposed keys
         const SECURE_API = {
