Add centralized API configuration and update endpoints in contact and dashboard scripts

--- a/contact.html
+++ b/contact.html
@@ -371,6 +371,7 @@
   gtag('config', 'G-229WRH1KTN');
 </script>
 
+    <script src="js/config.js"></script>
     <script src="js/contact.js"></script>
 </body>
 </html>
