--- a/dashboard.html
+++ b/dashboard.html
@@ -210,6 +210,7 @@
         </div>
     </div>
 
+    <script src="js/config.js"></script>
     <script src="js/dashboard.js"></script>
 
     <!-- Contact functionality implemented via secure backend API -->
