--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
         </div>
     </div>
 
+    <script src="js/config.js"></script>
     <script src="js/auth.js"></script>
 
     <!-- Chatbot -->
