--- a/faq.html
+++ b/faq.html
@@ -169,9 +169,9 @@
             </svg>
         </button>
 
-        <div class="faq-header">
-            <div class="logo-text">Things People Ask Before They Chill</div>
-            <p class="subtitle">We got you. Chilla is not a bank, not an investment, not a bot, not a brokerage. It's your financial co-pilot. And yes, your money stays with you.</p>
+            <div class="faq-header">
+            <div class="logo-text">Questions people ask before they chill</div>
+            <p class="subtitle">Short version: Chilla is your wealth co‑pilot. It connects to your broker, follows your instructions, and works quietly in the background. Your money stays with you.</p>
         </div>
 
         <div class="faq-list">
@@ -184,7 +184,7 @@
                 </button>
                 <div class="faq-answer">
                     <div class="faq-answer-content">
-                        Chilla™ is your wealth co-pilot. Think of it like a financial assistant powered by smart logic — quietly working in the background while you focus on living.
+                        Chilla™ is your wealth co‑pilot. It connects to your broker account and helps manage trades based on the path you choose. You control the money; Chilla does the heavy lifting.
                     </div>
                 </div>
             </div>
@@ -198,7 +198,7 @@
                 </button>
                 <div class="faq-answer">
                     <div class="faq-answer-content">
-                        Login, connect, and chill. From that point on, Chilla starts handling the heavy lifting in the background.
+                        After payment, you’ll log in and connect your broker. From then on, Chilla works in the background — you can check progress anytime.
                     </div>
                 </div>
             </div>
@@ -212,8 +212,7 @@
                 </button>
                 <div class="faq-answer">
                     <div class="faq-answer-content">
-                        You can chill with Chilla on any broker based on Chilla's logic and brokers' supported markets. Our goal? Wherever your money moves, 
-                        Chilla moves with you. Effortlessly.
+                        You can use Chilla with supported brokers and markets. We’re expanding coverage — the idea is: wherever your money moves, Chilla can move with you.
                     </div>
                 </div>
             </div>
@@ -227,7 +226,7 @@
                 </button>
                 <div class="faq-answer">
                     <div class="faq-answer-content">
-                        If you're new, you’ll need to register with a regulated broker in your country. Chilla connects to most global brokers — you choose, we adapt.
+                        If you’re new, start by opening an account with a regulated broker in your country. Chilla connects to many global brokers — you choose; we adapt.
                     </div>
                 </div>
             </div>
@@ -241,7 +240,7 @@
                 </button>
                 <div class="faq-answer">
                     <div class="faq-answer-content">
-                        Yes, absolutely. Chilla doesn't hold anything. Your money stays in your broker account and you have full control at all times. You can chill without feeling locked in.
+                        Yes. Your money stays in your own broker account. You can move funds anytime according to your broker’s rules.
                     </div>
                 </div>
             </div>
@@ -255,7 +254,7 @@
                 </button>
                 <div class="faq-answer">
                     <div class="faq-answer-content">
-                        You don't need trading knowledge. Just connect your broker, choose your path, and let Chilla handle the complexity while you stay in the loop.
+                        You don’t need trading knowledge. Connect your broker, choose your path, and Chilla handles the rest — with clear updates so you’re always in the loop.
                     </div>
                 </div>
             </div>
@@ -269,7 +268,7 @@
                 </button>
                 <div class="faq-answer">
                     <div class="faq-answer-content">
-                        Yes. Your funds remain in your regulated broker account. Beaverly never has custody of your money—we only provide your wealth co-pilot.
+                        Yes. Funds stay in your regulated broker account. Beaverly never has custody — we provide the co‑pilot.
                     </div>
                 </div>
             </div>
@@ -283,8 +282,7 @@
                 </button>
                 <div class="faq-answer">
                     <div class="faq-answer-content">
-                        No. Returns vary depending on market conditions and your selected strategy. Chilla™ focuses on long-term consistency and 
-              intelligent execution — but markets always involve risk.
+                        No. Markets involve risk. Results vary based on conditions and your chosen path. Chilla focuses on consistency and disciplined execution.
                     </div>
                 </div>
             </div>
@@ -298,8 +296,7 @@
                 </button>
                 <div class="faq-answer">
                     <div class="faq-answer-content">
-                        Chilla is your wealth co-pilot that helps you live a chilled life while doing the heavy lifting happily — 
-                        not an investment platform. We never hold your money. You maintain full control of your capital through your own broker account.
+                        Chilla is a co‑pilot, not a bank or investment platform. We don’t hold your money. You stay in control via your own broker account.
                     </div>
                 </div>
             </div>
