--- a/privacy.html
+++ b/privacy.html
@@ -100,7 +100,7 @@
     <meta http-equiv="X-Content-Type-Options" content="nosniff">
     <meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin">
     <meta http-equiv="Strict-Transport-Security" content="max-age=31536000; includeSubDomains; preload">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cook.beaverlyai.com https://www.googletagmanager.com https://cdn.botpress.cloud https://files.bpcontent.cloud 'sha256-SCfHb0f59QEhuYaon2DqnZfALcsBcsqwAhgV/RxmHnI='; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src https://fonts.gstatic.com; img-src 'self' data: https://cook.beaverlyai.com; connect-src 'self' https://cook.beaverlyai.com wss://cook.beaverlyai.com https://www.google-analytics.com https://analytics.google.com https://webchat.botpress.cloud wss://webchat.botpress.cloud; frame-src 'none'; object-src 'none'; base-uri 'self'; form-action 'self' https://cook.beaverlyai.com;">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cook.beaverlyai.com https://www.googletagmanager.com https://cdn.botpress.cloud https://files.bpcontent.cloud https://cdn.jsdelivr.net 'sha256-SCfHb0f59QEhuYaon2DqnZfALcsBcsqwAhgV/RxmHnI='; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src https://fonts.gstatic.com; img-src 'self' data: https://cook.beaverlyai.com; connect-src 'self' https://cook.beaverlyai.com wss://cook.beaverlyai.com https://www.google-analytics.com https://analytics.google.com https://webchat.botpress.cloud wss://webchat.botpress.cloud; frame-src 'none'; object-src 'none'; base-uri 'self'; form-action 'self' https://cook.beaverlyai.com;">
 </head>
 <body>
     <div class="content-container">
@@ -114,6 +114,9 @@
         </div>
 
         <h1>Privacy Policy for Beaverly®</h1>
+        <p style="background:var(--bg-secondary);padding:1rem 1.25rem;border-left:4px solid var(--accent-color);border-radius:8px;margin-top:-0.25rem;margin-bottom:1.25rem;font-size:0.95rem;line-height:1.5;color:var(--text-secondary)">
+            <strong>Plain language summary:</strong> This page explains what data we collect (account basics, usage patterns), why we use it (to run and improve Chilla), and your rights (access, delete, export, object). We never sell your personal data and your trading funds stay with your broker.
+        </p>
         <p><strong>Effective Date:</strong> June 28, 2025</p>
 
         <p>This Privacy Policy explains how Beaverly Innovative Systems Ltd. ("<strong>Beaverly</strong>," "<strong>we</strong>," "<strong>our</strong>," or "<strong>us</strong>") collects, uses, processes, and discloses personal data through our website, app, and other related services (collectively, the "<strong>Services</strong>").</p>
@@ -209,6 +212,7 @@
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-229WRH1KTN"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/lucide@latest/dist/umd/lucide.min.js"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
@@ -216,6 +220,7 @@
 
       gtag('config', 'G-229WRH1KTN');
     </script>
+    <script src="js/icons-init.js"></script>
 
     <script>
         // Setup theme from localStorage
