--- a/privacy.html
+++ b/privacy.html
@@ -1,231 +1,133 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>Privacy Policy | Beaverly®</title>
-    <link rel="stylesheet" href="css/base.css">
-    <link rel="stylesheet" href="css/auth.css">
-    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600&display=swap" rel="stylesheet" />
-    <style>
-        .content-container {
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 2rem 1rem;
-            line-height: 1.7;
-            min-height: 100vh;
-        }
-
-        .header-section {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            margin-bottom: 2rem;
-            padding-bottom: 1rem;
-            border-bottom: 1px solid var(--border-color);
-        }
-
-        @media (max-width: 768px) {
-            .header-section {
-                flex-direction: column;
-                align-items: flex-start;
-                gap: 1rem;
-            }
-        }
-
-        .back-btn {
-            display: flex;
-            align-items: center;
-            padding: 0.5rem 1rem;
-            background: var(--bg-secondary);
-            border: 1px solid var(--border-color);
-            border-radius: 8px;
-            color: var(--text-primary);
-            text-decoration: none;
-            font-size: 0.9rem;
-            transition: all 0.2s ease;
-        }
-
-        .back-btn:hover {
-            background: var(--bg-tertiary);
-            transform: translateY(-1px);
-        }
-
-        .back-btn svg {
-            width: 16px;
-            height: 16px;
-            margin-right: 0.5rem;
-        }
-
-        h1 {
-            font-size: 2rem;
-            margin-bottom: 1rem;
-            color: var(--text-primary);
-        }
-
-        h2 {
-            font-size: 1.5rem;
-            margin-top: 2rem;
-            color: var(--text-primary);
-        }
-
-        h3 {
-            color: var(--text-primary);
-        }
-
-        p {
-            margin: 1rem 0;
-            color: var(--text-primary);
-        }
-
-        ul {
-            padding-left: 1.5rem;
-        }
-
-        li {
-            color: var(--text-primary);
-        }
-
-        strong {
-            font-weight: 600;
-        }
-
-        a {
-            color: var(--accent-color);
-        }
-    </style>
-    <link rel="apple-touch-icon" href="apple-touch-icon.png">
-    <link rel="manifest" href="manifest.json">
-    <meta http-equiv="X-Frame-Options" content="DENY">
-    <meta http-equiv="X-Content-Type-Options" content="nosniff">
-    <meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin">
-    <meta http-equiv="Strict-Transport-Security" content="max-age=31536000; includeSubDomains; preload">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cook.beaverlyai.com https://www.googletagmanager.com https://cdn.botpress.cloud https://files.bpcontent.cloud https://cdn.jsdelivr.net 'sha256-SCfHb0f59QEhuYaon2DqnZfALcsBcsqwAhgV/RxmHnI='; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src https://fonts.gstatic.com; img-src 'self' data: https://cook.beaverlyai.com; connect-src 'self' https://cook.beaverlyai.com wss://cook.beaverlyai.com https://www.google-analytics.com https://analytics.google.com https://webchat.botpress.cloud wss://webchat.botpress.cloud; frame-src 'none'; object-src 'none'; base-uri 'self'; form-action 'self' https://cook.beaverlyai.com;">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <title>Privacy Policy | Beaverly®</title>
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600&display=swap" rel="stylesheet" />
+  <style>
+    body {
+      font-family: 'Outfit', sans-serif;
+      line-height: 1.7;
+      padding: 2rem;
+      max-width: 800px;
+      margin: auto;
+      color: #111;
+    }
+    h1, h2, h3 {
+      color: #000;
+    }
+    h1 {
+      font-size: 2rem;
+      margin-bottom: 1rem;
+    }
+    h2 {
+      font-size: 1.5rem;
+      margin-top: 2rem;
+    }
+    p {
+      margin: 1rem 0;
+    }
+    ul {
+      padding-left: 1.5rem;
+    }
+    strong {
+      font-weight: 600;
+    }
+  </style>
 </head>
 <body>
-    <div class="content-container">
-        <div class="header-section">
-            <a href="dashboard.html" class="back-btn">
-                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"/>
-                </svg>
-                Back to Dashboard
-            </a>
-        </div>
+  <h1>Privacy Policy for Beaverly®</h1>
+  <p><strong>Effective Date:</strong> June 28, 2025</p>
 
-        <h1>Privacy Policy for Beaverly®</h1>
-        <p style="background:var(--bg-secondary);padding:1rem 1.25rem;border-left:4px solid var(--accent-color);border-radius:8px;margin-top:-0.25rem;margin-bottom:1.25rem;font-size:0.95rem;line-height:1.5;color:var(--text-secondary)">
-            <strong>Plain language summary:</strong> This page explains what data we collect (account basics, usage patterns), why we use it (to run and improve Chilla), and your rights (access, delete, export, object). We never sell your personal data and your trading funds stay with your broker.
-        </p>
-        <p><strong>Effective Date:</strong> June 28, 2025</p>
+  <p>This Privacy Policy explains how Beaverly Innovative Systems Ltd. (“<strong>Beaverly</strong>,” “<strong>we</strong>,” “<strong>our</strong>,” or “<strong>us</strong>”) collects, uses, processes, and discloses personal data through our website, app, and other related services (collectively, the “<strong>Services</strong>”).</p>
 
-        <p>This Privacy Policy explains how Beaverly Innovative Systems Ltd. ("<strong>Beaverly</strong>," "<strong>we</strong>," "<strong>our</strong>," or "<strong>us</strong>") collects, uses, processes, and discloses personal data through our website, app, and other related services (collectively, the "<strong>Services</strong>").</p>
+  <h2>1. Legal Basis and Applicability</h2>
+  <p>This policy is governed by the Nigeria Data Protection Regulation (NDPR), and to the extent applicable, 
+    the General Data Protection Regulation (GDPR) and California Consumer Privacy Act (CCPA).</p>
 
-        <h2>1. Legal Basis and Applicability</h2>
-        <p>This policy is governed by the Nigeria Data Protection Regulation (NDPR), and to the extent applicable, 
-          the General Data Protection Regulation (GDPR) and California Consumer Privacy Act (CCPA).</p>
+  <h2>2. Information We Collect</h2>
 
-        <h2>2. Information We Collect</h2>
+  <h3>a. Personal Data You Provide</h3>
+  <ul>
+    <li>Full Name and Email Address (for account creation, authentication, and service communication)</li>
+    <li>Broker session tokens (for verified users utilizing Chilla™ live trading features)</li>
+    <li>Payment Metadata (via Paystack, Flutterwave, and future payment partners, excluding card details)</li>
+  </ul>
 
-        <h3>a. Personal Data You Provide</h3>
-        <ul>
-          <li>Full Name and Email Address (for account creation, authentication, and service communication)</li>
-          <li>Broker session tokens (for verified users utilizing Chilla™ live trading features)</li>
-          <li>Payment Metadata (via Paystack, Flutterwave, and future payment partners, excluding card details)</li>
-        </ul>
+  <h3>b. Automatically Collected Data</h3>
+  <ul>
+    <li>Device information, browser type, IP address, referral URLs</li>
+    <li>Usage patterns, interaction logs, clickstream analytics</li>
+    <li>Session identifiers, location approximations (city-level only)</li>
+  </ul>
 
-        <h3>b. Automatically Collected Data</h3>
-        <ul>
-          <li>Device information, browser type, IP address, referral URLs</li>
-          <li>Usage patterns, interaction logs, clickstream analytics</li>
-          <li>Session identifiers, location approximations (city-level only)</li>
-        </ul>
+  <h3>c. Cookies and Similar Technologies</h3>
+  <p>We use cookies and Google Analytics to enhance user experience, track events, and monitor performance. You may manage cookie preferences via your browser settings.</p>
 
-        <h3>c. Cookies and Similar Technologies</h3>
-        <p>We use cookies and Google Analytics to enhance user experience, track events, and monitor performance. You may manage cookie preferences via your browser settings.</p>
+  <h2>3. Use of Personal Data</h2>
+  <p>We process your data for the following purposes:</p>
+  <ul>
+    <li>To provide, manage, and improve our Services</li>
+    <li>To enable automated trading execution (for verified users)</li>
+    <li>To monitor engagement and system integrity</li>
+    <li>To communicate critical product updates, service changes, or security notices</li>
+    <li>To comply with legal obligations and enforce terms of service</li>
+  </ul>
 
-        <h2>3. Use of Personal Data</h2>
-        <p>We process your data for the following purposes:</p>
-        <ul>
-          <li>To provide, manage, and improve our Services</li>
-          <li>To enable automated trading execution (for verified users)</li>
-          <li>To monitor engagement and system integrity</li>
-          <li>To communicate critical product updates, service changes, or security notices</li>
-          <li>To comply with legal obligations and enforce terms of service</li>
-        </ul>
+  <h2>4. Data Sharing and Disclosures</h2>
+  <p>We do <strong>not</strong> sell personal information. We may disclose personal data:</p>
+  <ul>
+    <li>To subprocessors such as Firebase, Google, or Paystack (under contractual confidentiality obligations)</li>
+    <li>To comply with a subpoena, court order, or legal request</li>
+    <li>In connection with corporate restructuring, acquisition, or merger</li>
+    <li>In anonymized or aggregated form for insights, benchmarking, or research</li>
+  </ul>
 
-        <h2>4. Data Sharing and Disclosures</h2>
-        <p>We do <strong>not</strong> sell personal information. We may disclose personal data:</p>
-        <ul>
-          <li>To subprocessors such as Firebase, Google, or Paystack (under contractual confidentiality obligations)</li>
-          <li>To comply with a subpoena, court order, or legal request</li>
-          <li>In connection with corporate restructuring, acquisition, or merger</li>
-          <li>In anonymized or aggregated form for insights, benchmarking, or research</li>
-        </ul>
+  <h2>5. International Transfers</h2>
+  <p>If you access our Services from outside Nigeria, you acknowledge that your information may be transferred to, stored in, and processed in jurisdictions with different data protection standards.</p>
 
-        <h2>5. International Transfers</h2>
-        <p>If you access our Services from outside Nigeria, you acknowledge that your information may be transferred to, stored in, and processed in jurisdictions with different data protection standards.</p>
+  <h2>6. Data Retention</h2>
+  <p>We retain your data only for as long as necessary to fulfill the purposes outlined in this policy or as required by law. You may request deletion at any time (see Section 8).</p>
 
-        <h2>6. Data Retention</h2>
-        <p>We retain your data only for as long as necessary to fulfill the purposes outlined in this policy or as required by law. You may request deletion at any time (see Section 8).</p>
+  <h2>7. Data Security</h2>
+  <p>We employ administrative, technical, and organizational safeguards to protect your data, including encryption,
+    secure authentication, access controls, and continuous monitoring of vulnerabilities.</p>
 
-        <h2>7. Data Security</h2>
-        <p>We employ administrative, technical, and organizational safeguards to protect your data, including encryption,
-          secure authentication, access controls, and continuous monitoring of vulnerabilities.</p>
+  <h2>8. Your Rights</h2>
+  <p>You may exercise the following rights, subject to identity verification:</p>
+  <ul>
+    <li>Access: Request a copy of your personal data</li>
+    <li>Rectification: Request correction of inaccurate or incomplete data</li>
+    <li>Erasure: Request deletion of your data (“right to be forgotten”)</li>
+    <li>Objection: Object to direct marketing or profiling</li>
+    <li>Restriction: Limit the processing of your data</li>
+    <li>Data Portability: Request a machine-readable copy of your data</li>
+  </ul>
 
-        <h2>8. Your Rights</h2>
-        <p>You may exercise the following rights, subject to identity verification:</p>
-        <ul>
-          <li>Access: Request a copy of your personal data</li>
-          <li>Rectification: Request correction of inaccurate or incomplete data</li>
-          <li>Erasure: Request deletion of your data ("right to be forgotten")</li>
-          <li>Objection: Object to direct marketing or profiling</li>
-          <li>Restriction: Limit the processing of your data</li>
-          <li>Data Portability: Request a machine-readable copy of your data</li>
-        </ul>
+  <p>To exercise any of these rights, email us at <a href="mailto:privacy@beaverlyai.com">privacy@beaverlyai.com</a>.</p>
 
-        <p>To exercise any of these rights, email us at <a href="mailto:privacy@beaverlyai.com">privacy@beaverlyai.com</a>.</p>
+  <h2>9. Children’s Privacy</h2>
+  <p>Beaverly® does not knowingly collect personal information from individuals under the age of 18. If we become aware of such collection, 
+    we will take immediate steps to delete the information.</p>
 
-        <h2>9. Children's Privacy</h2>
-        <p>Beaverly® does not knowingly collect personal information from individuals under the age of 18. If we become aware of such collection, 
-          we will take immediate steps to delete the information.</p>
+  <h2>10. Changes to This Policy</h2>
+  <p>We may update this Privacy Policy periodically. When we do, we will revise the “Effective Date” and 
+    notify users through in-app messaging or email when material changes occur.</p>
 
-        <h2>10. Changes to This Policy</h2>
-        <p>We may update this Privacy Policy periodically. When we do, we will revise the "Effective Date" and 
-          notify users through in-app messaging or email when material changes occur.</p>
+  <h2>11. Contact and Complaints</h2>
+  <p>For any questions or concerns about this policy, or to lodge a data protection complaint, please contact:</p>
+  <p>
+    <strong>Data Protection Officer (DPO)</strong><br />
+    Beaverly Technologies Ltd.<br />
+    Email: <a href="mailto:privacy@beaverlyai.com">privacy@beaverlyai.com</a><br />
+    Website: <a href="https://beaverlyai.com">https://beaverlyai.com</a>
+  </p>
 
-        <h2>11. Contact and Complaints</h2>
-        <p>For any questions or concerns about this policy, or to lodge a data protection complaint, please contact:</p>
-        <p>
-          <strong>Data Protection Officer (DPO)</strong><br />
-          Beaverly Technologies Ltd.<br />
-          Email: <a href="mailto:privacy@beaverlyai.com">privacy@beaverlyai.com</a><br />
-          Website: <a href="https://beaverlyai.com">https://beaverlyai.com</a>
-        </p>
-
-        <p>If unsatisfied, you may contact the Nigerian Data Protection Commission (NDPC) or your local data protection authority.</p>
-    </div>
-
-    <!-- Chatbot -->
-    <script src="https://cdn.botpress.cloud/webchat/v3.0/inject.js"></script>
-    <script src="https://files.bpcontent.cloud/2025/06/09/22/20250609220506-ZFL7FQ6G.js"></script>
-
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-229WRH1KTN"></script>
-    <script defer src="https://cdn.jsdelivr.net/npm/lucide@latest/dist/umd/lucide.min.js"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'G-229WRH1KTN');
-    </script>
-    <script src="js/icons-init.js"></script>
-
-    <script>
-        // Setup theme from localStorage
-        const theme = localStorage.getItem('chilla-theme') || 'light';
-        document.documentElement.setAttribute('data-theme', theme);
-    </script>
+  <p>If unsatisfied, you may contact the Nigerian Data Protection Commission (NDPC) or your local data protection authority.</p>
 </body>
 </html>
