feat: Update OAuth app ID logic for Deriv and refine disclaimer in terms of service

--- a/terms.html
+++ b/terms.html
@@ -178,6 +178,6 @@ All strategy templates and logic made available within Chilla™ are provided as
 
   </p>
 
-  <p style="margin-top: 2rem; font-size: 0.95rem; font-style: italic;">Disclaimer: Beaverly® is not a licensed broker-dealer or financial advisory firm. We build software to help you automate trading with ease and transparency.</p>
+  <p style="margin-top: 2rem; font-size: 0.95rem; font-style: italic;">Disclaimer: Beaverly® is not a licensed broker-dealer or financial advisory firm. We provide autonomous execution infrastructure that connects to your broker account.</p>
 </body>
 </html>
