refactor: Revise FAQ content for clarity and user engagement; enhance messaging throughout

--- a/faq.html
+++ b/faq.html
@@ -170,35 +170,35 @@
         </button>
 
             <div class="faq-header">
-            <div class="logo-text">Questions people ask before they chill</div>
-            <p class="subtitle">Short version: Chilla is your wealth co‑pilot. It connects to your broker, follows your instructions, and works quietly in the background. Your money stays with you.</p>
+            <div class="logo-text">Things People Ask Before They Chill</div>
+            <p class="subtitle">We got you. Chilla is not a bank, not an investment service, not a brokerage. It's your co-pilot for simplified market participation. And yes, your money stays with you.</p>
         </div>
 
         <div class="faq-list">
             <div class="faq-item">
                 <button class="faq-question">
-                    <span>What is Chilla AI?</span>
+                    <span>What is Chilla?</span>
                     <svg class="faq-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"/>
                     </svg>
                 </button>
                 <div class="faq-answer">
                     <div class="faq-answer-content">
-                        Chilla™ is your wealth co‑pilot. It connects to your broker account and helps manage trades based on the path you choose. You control the money; Chilla does the heavy lifting.
+                        Chilla™ is your market participation co-pilot. Think of it like a financial execution tool powered by smart logic. Quietly working in the background within your specified guardrails while you focus on life.
                     </div>
                 </div>
             </div>
 
             <div class="faq-item">
                 <button class="faq-question">
-                    <span>How do I get access after payment?</span>
+                    <span>How do I get access?</span>
                     <svg class="faq-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"/>
                     </svg>
                 </button>
                 <div class="faq-answer">
                     <div class="faq-answer-content">
-                        After payment, you’ll log in and connect your broker. From then on, Chilla works in the background — you can check progress anytime.
+                        Login, connect, and chill. From that point on, Chilla starts handling the execution and monitoring within your guardrails in the background.
                     </div>
                 </div>
             </div>
@@ -212,7 +212,7 @@
                 </button>
                 <div class="faq-answer">
                     <div class="faq-answer-content">
-                        You can use Chilla with supported brokers and markets. We’re expanding coverage — the idea is: wherever your money moves, Chilla can move with you.
+                        You can chill with Chilla on any broker that supports Chilla's integration and the markets you select. Our goal? Wherever your money moves, Chilla moves with you. Effortlessly.
                     </div>
                 </div>
             </div>
@@ -226,7 +226,7 @@
                 </button>
                 <div class="faq-answer">
                     <div class="faq-answer-content">
-                        If you’re new, start by opening an account with a regulated broker in your country. Chilla connects to many global brokers — you choose; we adapt.
+                        If you're new, you'll need to register with a regulated broker in your country. Chilla connects to most global brokers. You choose, we adapt.
                     </div>
                 </div>
             </div>
@@ -240,7 +240,7 @@
                 </button>
                 <div class="faq-answer">
                     <div class="faq-answer-content">
-                        Yes. Your money stays in your own broker account. You can move funds anytime according to your broker’s rules.
+                        Yes, absolutely. Chilla doesn't hold your capital. Your money stays in your broker account, and you have full control at all times. You can chill without feeling locked in.
                     </div>
                 </div>
             </div>
@@ -254,7 +254,7 @@
                 </button>
                 <div class="faq-answer">
                     <div class="faq-answer-content">
-                        You don’t need trading knowledge. Connect your broker, choose your path, and Chilla handles the rest — with clear updates so you’re always in the loop.
+                        You don't need trading knowledge. Just connect your broker, select your market guardrails, and let Chilla handle the complexity while you stay in the loop.
                     </div>
                 </div>
             </div>
@@ -268,7 +268,7 @@
                 </button>
                 <div class="faq-answer">
                     <div class="faq-answer-content">
-                        Yes. Funds stay in your regulated broker account. Beaverly never has custody — we provide the co‑pilot.
+                        Yes. Your funds remain in your regulated broker account. Beaverly never has custody of your money. We only provide your market co-pilot.
                     </div>
                 </div>
             </div>
@@ -282,7 +282,7 @@
                 </button>
                 <div class="faq-answer">
                     <div class="faq-answer-content">
-                        No. Markets involve risk. Results vary based on conditions and your chosen path. Chilla focuses on consistency and disciplined execution.
+                        No. Returns vary depending on market conditions and the logic used. Chilla™ focuses on disciplined execution and long-term consistency, but all markets involve risk.
                     </div>
                 </div>
             </div>
@@ -296,7 +296,7 @@
                 </button>
                 <div class="faq-answer">
                     <div class="faq-answer-content">
-                        Chilla is a co‑pilot, not a bank or investment platform. We don’t hold your money. You stay in control via your own broker account.
+                        Chilla is your market co-pilot that executes based on your instructions, not an investment platform. We never hold your money. You maintain full control of your capital through your own broker account.
                     </div>
                 </div>
             </div>
@@ -304,7 +304,7 @@
 
         <div class="support-card">
             <h3>Still need help?</h3>
-            <p>Can't find what you're looking for? Our support team is here to help you get the most out of Chilla.</p>
+            <p>Can't find what you're looking for? Our support team is here to assist.</p>
             <button class="primary-btn" onclick="window.location.href='contact.html'">Contact Support</button>
         </div>
     </div>
